# retrieval-augmented-generation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/: exception_handlers.py
app/cache/: embedding_cache.py  response_cache.py
app/chunkers/: recursive_splitter.py
app/core/: config.py  exceptions.py  logging.py  metrics.py
app/embedders/: openai_embedder.py
app/enums/: document_status.py  file_type.py  intent.py
app/llm_clients/: openai_chat_client.py
app/loaders/: document_loader.py  pdf_loader.py  text_loader.py
app/models/: mappers.py
app/pipelines/: ingest_pipeline.py  query_pipeline.py
app/prompts/: answer_with_context.py  static_responses.py  system_prompt.py
app/repositories/: document_repository.py
app/retrievers/: bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_retriever.py
app/services/: ask_service.py  document_service.py
app/storages/: conversation_store.py  database.py  faiss_store.py  file_storage.py  redis_store.py
app/templates/: _chat_exchange.html  _document_list.html  base.html  index.html
app/tools/: __init__.py  base.py  calculator_tool.py  list_documents_tool.py
app/utils/: async_rwlock.py  hashing.py  sample_pdf.py  token_counting.py
app/validators/: intent_classifier.py  query_validator.py  upload_validator.py
docs/: architecture.md
migrations/: env.py
scripts/: concurrency_smoke.py  generate_test_pdf.py
tests/: conftest.py
tests/unit/: test_async_rwlock.py  test_chunker.py  (+15 more)
(+15 files in other folders)
